Update workflow to not have old name

--- a/.github/workflows/add_project_pull_requests_issues_dev.yml
+++ b/.github/workflows/add_project_pull_requests_issues_dev.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   assign_one_project:
     runs-on: ubuntu-latest
-    name: Assign to iPhone automation Project
+    name: Assign to Default Project
     steps:
     - name: Assign NEW issues and pull request to project
       uses: srggrs/assign-one-project-github-action@1.2.0
