--- a/.github/workflows/add_project_pull_requests_issues_dev.yml
+++ b/.github/workflows/add_project_pull_requests_issues_dev.yml
@@ -18,4 +18,4 @@ jobs:
       uses: srggrs/assign-one-project-github-action@1.2.0
       if: github.event.action == 'opened'
       with:
-        project: 'GITHUB_URL_TO_PROJECT'
+        project: 'https://github.com/orgs/Cassio-is-Great/projects/3'
