Update README.md and add repo project code for add_project_pull_requests

--- a/.github/workflows/add_project_pull_requests_issues_dev.yml
+++ b/.github/workflows/add_project_pull_requests_issues_dev.yml
@@ -6,8 +6,12 @@ on:
   pull_request:
     types: [opened]
     branches:
-      - development
+      - [development, master]
 env:
+  # For linking a repo project
+  #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+
+  # For linking a organization project
   MY_GITHUB_TOKEN: ${{ secrets.AUTOMATE_ISSUES_PULL_REQUESTS }}
 
 jobs:
