Fix add_project_pull_requests_issues_dev script

--- a/.github/workflows/add_project_pull_requests_issues_dev.yml
+++ b/.github/workflows/add_project_pull_requests_issues_dev.yml
@@ -6,7 +6,8 @@ on:
   pull_request:
     types: [opened]
     branches:
-      - development master
+      - development
+      - master
 env:
   # For linking a repo project
   #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
