--- a/.github/workflows/org-project-automation.yml
+++ b/.github/workflows/org-project-automation.yml
@@ -1,17 +1,18 @@
 name: Auto Assign Issues and PRs to Main Org Project
-
 on:
   issues:
     types: [opened]
   pull_request:
-    types: [opened]
-
+    types: [opened, pushed]
+env:
+  MY_GITHUB_TOKEN: ${{ secrets.AUTOMATE_ISSUES_PULL_REQUESTS }}
 jobs:
-  automate-project-columns:
+  assign_one_project:
     runs-on: ubuntu-latest
+    name: 'Assign to Master project: Cassio is Great Indeed'
     steps:
-      - uses: alex-page/github-project-automation-plus@v0.2.4
-        with:
-          project: 'https://github.com/orgs/Cassio-is-Great/projects/5'
-          column: 'To do'
-          repo-token: ${{ secrets.AUTOMATE_ISSUES_PULL_REQUESTS }}
+    - name: Assign NEW issues and pull request to Cassio is Great Indeed
+      uses: srggrs/assign-one-project-github-action@1.2.0
+      if: github.event.action == 'opened'
+      with:
+        project: 'https://github.com/orgs/Cassio-is-Great/projects/5'
