--- a/.github/workflows/org-project-automation.yml
+++ b/.github/workflows/org-project-automation.yml
@@ -3,7 +3,9 @@ on:
   issues:
     types: [opened]
   pull_request:
-    types: [opened, pushed]
+    types: [opened]
+  commit:
+    types: [push]
 env:
   MY_GITHUB_TOKEN: ${{ secrets.AUTOMATE_ISSUES_PULL_REQUESTS }}
 jobs:
