--- a/.github/workflows/main-project-automation.yml
+++ b/.github/workflows/main-project-automation.yml
@@ -4,7 +4,9 @@ on:
   issues:
     types: [opened]
   pull_request:
-    types: [opened, push]
+    types: [opened]
+  commit:
+    types: [push]
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 jobs:
