--- a/.github/workflows/main-project-automation.yml
+++ b/.github/workflows/main-project-automation.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     types: [opened]
   push:
+    paths:
+    - '**.*'
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 jobs:
