--- a/.github/workflows/main-project-automation.yml
+++ b/.github/workflows/main-project-automation.yml
@@ -4,10 +4,7 @@ on:
   issues:
     types: [opened]
   pull_request:
-    types: [opened]
-  push:
-    paths:
-    - '**.*'
+    types: [opened, synchronize]
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 jobs:
