--- a/.github/workflows/org-project-automation.yml
+++ b/.github/workflows/org-project-automation.yml
@@ -3,10 +3,7 @@ on:
   issues:
     types: [opened]
   pull_request:
-    types: [opened]
-  push:
-    paths:
-    - '**.*'
+    types: [opened, synchronize]
 env:
   MY_GITHUB_TOKEN: ${{ secrets.AUTOMATE_ISSUES_PULL_REQUESTS }}
 jobs:
