Fixed create release canidate added Cassioblu to known words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     },
     "peacock.color": "#61dafb",
     "cSpell.words": [
-        "cassio"
+        "cassio",
+        "Cassioblu"
     ]
 }
