add name to reate-release-branch

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -4,6 +4,7 @@ on:
   jobs:
     #Uses https://github.com/marketplace/actions/create-branch
     #Create a release branch with name "release-candidate"
+    name: create release branch
     create-release-branch:
       steps:
         uses: peterjgrainger/action-create-branch@v1.0.0
