--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -3,12 +3,14 @@ on:
   workflow_dispatch:
 jobs:
   #Uses https://github.com/marketplace/actions/create-branch
-  #Create a release branch with name "release-candidate"
   create-release-branch:
-    uses: peterjgrainger/action-create-branch@v1.0.0
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  createPullRequest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Create release candidate"
+        uses: peterjgrainger/action-create-branch@v1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  create-pull-request:
     runs-on: ubuntu-latest
     steps:
       - name: Get current date
