--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with: 
-          branch: release-candidate
+          branch: release-candidate-${{ steps.date.outputs.date }}
           base: master
           title: "[A] release candidate ${{ steps.date.outputs.date }}"
           body: |
