--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create pull request
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           ref: development
       - name: Get current date
