--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -17,6 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with: 
           branch: release-candidate-${{ steps.date.outputs.date }}
+          base: master
           title: "[A] release candidate ${{ steps.date.outputs.date }}"
           body: |
             Pull request for release candidate ${{ steps.date.outputs.date }}
