--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -6,19 +6,16 @@ jobs:
   create-release-branch-and-pull-request:
     runs-on: ubuntu-latest
     steps:
-      - name: Create release branch
-        uses: actions/checkout@v2
-        with:
-          ref: 'development'
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d-%HH-%MM-%ss')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%h:%M-%s')"
       - name: Make release branch
-        uses: peterjgrainger/action-create-branch@v1.0.0
+        run: |
+          git checkout origin development
+          git checkout -b release-candidate-${{ steps.date.outputs.date }}
+          git push origin release-candidate-${{ steps.date.outputs.date }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          branch: 'release-candidate-${{ steps.date.outputs.date }}'
 
       # - name: Create pull request
       #   uses: actions/checkout@v2
