--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -6,6 +6,7 @@ jobs:
   create-release-branch-and-pull-request:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%h:%M-%s')"
