add remote head

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -12,6 +12,7 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%h:%M-%s')"
       - name: Make release branch
         run: |
+          git remote set-head origin development
           git checkout origin/development
           git checkout -b release-candidate-${{ steps.date.outputs.date }}
           git push origin release-candidate-${{ steps.date.outputs.date }}
