still attempting to create branch off development

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -7,15 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+          with:
+            ref: "development"
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%h:%M-%s')"
       - name: Make release branch
         run: |
-          git remote set-head origin development
-          git checkout origin/development
           git checkout -b release-candidate-${{ steps.date.outputs.date }}
-          git push origin release-candidate-${{ steps.date.outputs.date }}
+          git push -u origin release-candidate-${{ steps.date.outputs.date }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
