--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -11,7 +11,7 @@ jobs:
           ref: development
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%h:%M-%s')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%h-%M-%S')"
       - name: Make release branch
         run: |
           git checkout -b release-candidate-${{ steps.date.outputs.date }}
