--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -18,9 +18,10 @@ jobs:
         run: |
           hub checkout -b release-candidate-${{ steps.date.outputs.date }}
           hub push -u origin release-candidate-${{ steps.date.outputs.date }}
+          hub remote set-head origin master
           hub pull-request -m "[A] release candidate ${{ steps.date.outputs.date }}
           
-          **Test**" -h origin/master -l release, automated pr
+          **Test**" -l release, automated pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Create Pull Request
