fix create release pr

--- a/.github/workflows/create-release-pr-automation.yml
+++ b/.github/workflows/create-release-pr-automation.yml
@@ -3,5 +3,7 @@ on:
   push:
     branches: "release-candidate-UTC-*"
 jobs:
-  job1:
-    - run: echo "foobar"
+  create-pull-request:
+    steps:
+      - name: Create pull request for release
+        run: echo "foobar"
