--- a/.github/workflows/create-release-pr-automation.yml
+++ b/.github/workflows/create-release-pr-automation.yml
@@ -4,6 +4,7 @@ on:
     branches: "release-candidate-UTC-*"
 jobs:
   create-pull-request:
+    runs-on: ubuntu-latest
     steps:
       - name: Create pull request for release
         run: echo "foobar"
