--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -12,14 +12,27 @@ jobs:
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%H.%M.%S')"
+      - name: Create release branch name
+        id: branch_name
+        run echo "::set-output name=branch_name::'release-candidate-UTC-${{ steps.date.outputs.date }}'"
       - name: Make release branch
         run: |
-          git checkout -b release-candidate-UTC-${{ steps.date.outputs.date }}
-          git push -u origin release-candidate-UTC-${{ steps.date.outputs.date }}
-          touch .releases/release-UTC-${{ steps.date.outputs.date }}-notes.txt
-          rm .releases/release-UTC-${{ steps.date.outputs.date }}-notes.txt
+          git checkout -b ${{ steps.date.outputs.branch_name }}
+          git push -u origin ${{ steps.date.outputs.branch_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Remove preexisting release notes for branch if exists
+        run: |
+          if [ -f ${{ steps.date.outputs.branch_name }} ] ; then
+            rm .releases/${{ steps.date.outputs.branch_name }}-notes.txt
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      - name: Add release notes
+        run: |
+          touch .releases/${{ steps.date.outputs.branch_name }}-notes.txt
           git add .releases/release-UTC-${{ steps.date.outputs.date }}-notes.txt
           git commit -m "release-UTC-${{ steps.date.outputs.date }} added notes"
           git push origin release-candidate-UTC-${{ steps.date.outputs.date }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
