--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -14,7 +14,7 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%H.%M.%S')"
       - name: Create release branch name
         id: branch_name
-        run: echo "::set-output name=branch_name::release-candidate-UTC-${{ steps.date.outputs.date }}"
+        run: echo "release-candidate-UTC-${{ steps.date.outputs.date }}"
       - name: Make release branch
         run: |
           git checkout -b ${{ steps.date.outputs.branch_name }}
