--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -31,7 +31,6 @@ jobs:
       - name: Create file
         uses: "finnp/create-file-action@master"
         env:
-          FILE_NAME = ".releases/${{ steps.branch.outputs.name }}-notes.txt"
-          FILE_DATA = "#Example file\nThis is an example"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          FILE_NAME: ".releases/${{ steps.branch.outputs.name }}-notes.txt"
+          FILE_DATA: "#Example file\nThis is an example"   
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}       
