--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -28,9 +28,14 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-      - name: Create file
+      - name: Create release notes file
         uses: "finnp/create-file-action@master"
         env:
           FILE_NAME: ".releases/${{ steps.branch.outputs.name }}-notes.txt"
           FILE_DATA: "#Example file\nThis is an example"   
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}       
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Add release notes file
+        run: |
+          git add .releases/${{ steps.branch.outputs.name }}-notes.txt
+          git commit -m "Add release notes for ${{ steps.branch.outputs.name }}"
+          git push origin ${{ steps.branch.outputs.name }}
