--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -28,20 +28,20 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      - name: Switch to new branch
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ steps.branch.outputs.name }}
       - name: Create release notes file
         uses: "finnp/create-file-action@master"
         env:
           FILE_NAME: ".releases/${{ steps.branch.outputs.name }}-notes.txt"
           FILE_DATA: "#Example file\nThis is an example"   
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Switch to new branch
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ steps.branch.outputs.name }}
-      - name: Add release notes file
-        uses: EndBug/add-and-commit@v4 
-        with:
-          add: .releases/${{ steps.branch.outputs.name }}-notes.txt
-          message: Add release notes for ${{ steps.branch.outputs.name }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Add release notes file
+      #   uses: EndBug/add-and-commit@v4 
+      #   with:
+      #     add: .releases/${{ steps.branch.outputs.name }}-notes.txt
+      #     message: Add release notes for ${{ steps.branch.outputs.name }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
