--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Add release notes file
         uses: EndBug/add-and-commit@v4 
         with:
-          add: .releases/${{ steps.branch.outputs.name }}-notes.txt
+          cwd: ./.releases/
+          add: ${{ steps.branch.outputs.name }}-notes.txt
           message: Add release notes for ${{ steps.branch.outputs.name }}
         env:
-          GITHUB_TOKEN: ${{ secrets.AUTOMATE_ISSUES_PULL_REQUESTS }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
