--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -7,8 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: development
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d-T%H.%M.%S')"
@@ -21,13 +19,6 @@ jobs:
           git push -u origin ${{ steps.branch.outputs.name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Remove preexisting release notes for branch if exists
-        run: |
-          if [ -f ${{ steps.branch.outputs.name }} ] ; then
-            rm .releases/${{ steps.branch.outputs.name }}-notes.txt
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       - name: Create release notes file
         uses: "finnp/create-file-action@master"
         env:
@@ -42,3 +33,11 @@ jobs:
           ref: ${{ steps.branch.outputs.name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create pull request
+        run: |
+          git pull-request 
+      - uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Create pull request
+        run: git pull-request -b ${{github.repository}}:${{ steps.branch.outputs.name }}
