--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -37,4 +37,4 @@ jobs:
         with:
           ref: master
       - name: Create pull request
-        run: git request-pull -b ${{github.repository}}:${{ steps.branch.outputs.name }}
+        run: git request-pull -b "https://github.com/${{github.repository}}:${{ steps.branch.outputs.name }}"
