add github token

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -26,3 +26,5 @@ jobs:
         uses: Geertvdc/setup-hub@v1.0.0
       - name: Create pull request
         run: hub pull-request -b master -m "test"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
