update pr title

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -26,7 +26,6 @@ jobs:
         uses: Geertvdc/setup-hub@v1.0.0
       - name: Create pull request
         run: |
-          description=""
-          hub pull-request -b master -m "[A] Release Candidate $(date +'%Y-%m-%d')\nAuto generated release branch from development. Created at $(date +'%T%H.%M.%S') UTC" -l release,"automated pr"
+          hub pull-request -b master -m "[A] Release Candidate $(date +'%Y-%m-%d-T%H.%M.%S') UTC" -l release,"automated pr"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
