--- a/.github/workflows/org-project-automation.yml
+++ b/.github/workflows/org-project-automation.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     name: 'Assign to Master project: Cassio is Great Indeed'
     steps:
-    - name: Assign NEW issues and pull request to Cassio is Great Indeed
+    - name: Assign NEW issues and pull request to 39M main project
       uses: srggrs/assign-one-project-github-action@1.2.0
       if: github.event.action == 'opened'
       with:
-        project: 'https://github.com/orgs/Cassio-is-Great/projects/5'
+        project: 'https://github.com/orgs/My-Power-STN39M-Hopefully/projects/3'
